tests/snapshots/integration__generate_example_site-2.snap
---
source: tests/integration.rs
expression: "contents.split('\\n').collect::<Vec<&str>>()"
---
- "<!DOCTYPE html>"
- "<html lang=\"en\">"
- "    <head>"
- "        <meta charset=\"UTF-8\">"
- "        <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">"
- "        <title>Welcome!</title>"
- "        <link rel=\"stylesheet\" href=\"/static/tw.css\">"
- "        <script src=\"assets/dev-reload.26ccffdaf8b45deb.js\"></script>"
- "    </head>"
- "    <body>"
- "        <main>"
- "            <nav class=\"bg-gray-800\">"
- "                <div class=\"container mx-auto px-6 py-3\">"
- "                    <div class=\"flex justify-between items-center\">"
- "                        <div class=\"flex\">"
- "                            <div class=\"text-white text-lg font-semibold\">Stalagmite</div>"
- "                            <div class=\"ml-10 space-x-4\">"
- "                                <a href=\"#home\" class=\"text-gray-300 hover:text-white\">Home</a>"
- "                                <a href=\"#blog\" class=\"text-gray-300 hover:text-white\">Blog</a>"
- "                                <a href=\"#projects\" class=\"text-gray-300 hover:text-white\">Projects</a>"
- "                            </div>"
- "                        </div>"
- "                    </div>"
- "                </div>"
- "            </nav>"
- ""
- "            <div class=\"space-y-5\">"
- "    <h1>Welcome!</h1>"
- "    <div class=\"space-y-2 bg-orange-500\"><h2>I've been generated with <code>stalagmite</code>"
- "!</h2>"
- "<p class=\"bg-purple-300\">Lorem ipsum dolor sit amet, <i>consectetur adipiscing elit</i>"
- ", sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>"
- "<p class=\"bg-purple-300\">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>"
- "</div>"
- "</div>"
- "        </main>"
- "    </body>"
- "</html>"

