tests/snapshots/integration__generate_example_site-3.snap
---
source: tests/integration.rs
expression: "contents.split('\\n').collect::<Vec<&str>>()"
---
- "<html>"
- "    <head>"
- "        <title>TODO</title>"
- "        <link rel=\"stylesheet\" href=\"/static/tw.5a43a1194ae13a74.css\">"
- "    </head>"
- "    <body>"
- "        <main>"
- "            <div>"
- "                <ul>"
- "                    "
- "                        <li class=\"bg-green-500\">"
- "                            <a href=\"/blog/welcome-to-my-blog/\">"
- "                                Welcome!"
- "                            </a>"
- "                            <div>"
- "                                "
- "                                <p class=\"bg-purple-300\">Lorem ipsum dolor sit amet, <i>consectetur adipiscing elit</i>"
- ", sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>"
- ""
- "                            </div>"
- "                        </li>"
- "                    "
- "                </ul>"
- "            </div>"
- "            "
- "            "
- "        </main>"
- "    </body>"
- "</html>"

