tests/snapshots/integration__generate_example_site.snap
---
source: tests/integration.rs
expression: "contents.split('\\n').collect::<Vec<&str>>()"
---
- "<!DOCTYPE html>"
- "<html lang=\"en\">"
- "    <head>"
- "        <meta charset=\"UTF-8\">"
- "        <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">"
- "        <title>Example Stalagmite Site</title>"
- "        <link rel=\"stylesheet\" href=\"/static/tw.bc9667e185d1717e.css\">"
- "    </head>"
- "    <body>"
- "        <main>"
- "            <nav class=\"bg-gray-800\">"
- "                <div class=\"container mx-auto px-6 py-3\">"
- "                    <div class=\"flex justify-between items-center\">"
- "                        <div class=\"flex\">"
- "                            <div class=\"text-white text-lg font-semibold\">Stalagmite</div>"
- "                            <div class=\"ml-10 space-x-4\">"
- "                                <a href=\"#home\" class=\"text-gray-300 hover:text-white\">Home</a>"
- "                                <a href=\"#blog\" class=\"text-gray-300 hover:text-white\">Blog</a>"
- "                                <a href=\"#projects\" class=\"text-gray-300 hover:text-white\">Projects</a>"
- "                            </div>"
- "                        </div>"
- "                    </div>"
- "                </div>"
- "            </nav>"
- ""
- "            <div class=\"bg-blue-500\">Home page is here!</div>"
- ""
- "        </main>"
- "    </body>"
- "</html>"

